test/integration/bad/laplace_marginal/bad_forward_7.stan
model {
  target += laplace_marginal_tol_neg_binomial_2_log_lpmf(1, 1, 1);
}
